# c_learning_project

./: .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
client/: CMakeLists.txt  client.c
client/chat_client/: CMakeLists.txt
client/chat_client/api/: chat_client.h
client/chat_client/inc/: chat_client_fsm.h  chat_client_internal.h
client/chat_client/src/: chat_client_cback.c  chat_client_fsm.c  chat_client_internal.c
client/client_ui/inc/: client_ui_internal.h
client/client_ui/src/: client_ui_fsm.c  client_ui_input_fsm.c  client_ui_internal.c
client/src/: client_cback.c  client_fsm.c
common/: CMakeLists.txt
common/chat_event_io/: CMakeLists.txt
common/chat_event_io/api/: chat_event_io.h
common/chat_event_io/src/: chat_event_io.c  chat_event_io_fsm_reader.c
common/chat_user/: CMakeLists.txt
common/network_watcher/: CMakeLists.txt
common/network_watcher/api/: network_watcher.h
common/network_watcher/inc/: network_watcher_fsm.h
common/network_watcher/src/: network_watcher_fsm.c
networking_project/: Makefile  template.h
networking_project/client/: CMakeLists.txt  client.c
networking_project/client/chat_client/: CMakeLists.txt
networking_project/client/chat_client/api/: chat_client.h
networking_project/client/chat_client/inc/: chat_client_fsm.h  chat_client_internal.h
networking_project/client/chat_client/src/: chat_client.c  chat_client_cback.c  chat_client_fsm.c  chat_client_internal.c  chat_client_network.c
networking_project/client/client_ui/: CMakeLists.txt
networking_project/client/client_ui/api/: client_ui.h
networking_project/client/client_ui/inc/: client_ui_fsm.h  client_ui_internal.h
networking_project/client/client_ui/src/: client_ui.c  client_ui_fsm.c  client_ui_input_fsm.c  client_ui_internal.c
networking_project/client/inc/: client.h  client_fsm.h
networking_project/client/src/: client_cback.c  client_fsm.c
networking_project/common/chat_connection/: CMakeLists.txt
networking_project/common/chat_connection/api/: chat_connection.h
networking_project/common/chat_connection/inc/: chat_connection_fsm.h  chat_connection_internal.h
networking_project/common/chat_connection/src/: chat_connection.c  chat_connection_fsm.c
networking_project/common/chat_event/: CMakeLists.txt
networking_project/common/chat_event/api/: chat_event.h
networking_project/common/chat_event/src/: chat_event.c
networking_project/common/chat_event_io/: CMakeLists.txt
networking_project/common/chat_event_io/api/: chat_event_io.h
networking_project/common/chat_event_io/inc/: chat_event_io_fsm.h  chat_event_io_internal.h
networking_project/common/chat_event_io/src/: chat_event_io.c  chat_event_io_fsm.c  chat_event_io_fsm_reader.c  chat_event_io_fsm_writer.c
networking_project/common/common_types/: CMakeLists.txt
networking_project/common/common_types/api/: common_types.h
networking_project/common/common_types/src/: common_types.c
networking_project/common/message_queue/: CMakeLists.txt
networking_project/common/message_queue/api/: message_queue.h
networking_project/common/message_queue/inc/: message_queue_internal.h
networking_project/common/message_queue/src/: message_queue.c
networking_project/common/network_watcher/: CMakeLists.txt
networking_project/common/network_watcher/api/: network_watcher.h
networking_project/common/network_watcher/inc/: network_watcher_fsm.h  network_watcher_internal.h
networking_project/common/network_watcher/src/: network_watcher.c  network_watcher_fsm.c  network_watcher_internal.c
networking_project/common/shared_ptr/: CMakeLists.txt
networking_project/common/shared_ptr/api/: shared_ptr.h
networking_project/common/shared_ptr/src/: shared_ptr.c
networking_project/server/: CMakeLists.txt  main.c  server.c
networking_project/server/chat_auth/: CMakeLists.txt
networking_project/server/chat_auth/api/: chat_auth.h
networking_project/server/chat_auth/inc/: chat_auth_fsm.h  chat_auth_internal.h
networking_project/server/chat_auth/src/: chat_auth.c  chat_auth_fsm.c  chat_auth_internal.c
networking_project/server/chat_clients/: CMakeLists.txt
networking_project/server/chat_clients/api/: chat_clients.h
networking_project/server/chat_clients/inc/: chat_clients_fsm.h  chat_clients_internal.h
networking_project/server/chat_clients/src/: chat_clients.c  chat_clients_cback.c  chat_clients_fsm.c  chat_clients_internal.c
networking_project/server/chat_connection/: CMakeLists.txt
networking_project/server/chat_connection/api/: chat_connection.h
networking_project/server/chat_connection/inc/: chat_connection_fsm.h  chat_connection_internal.h
networking_project/server/chat_connection/src/: chat_connection.c  chat_connection_cback.c  chat_connection_fsm.c
networking_project/server/chat_connections/api/: chat_connections.h
networking_project/server/chat_connections/inc/: chat_connections_fsm.h  chat_connections_internal.h
networking_project/server/chat_connections/src/: chat_connections.c  chat_connections_cback.c  chat_connections_fsm.c  chat_connections_internal.c
networking_project/server/chat_server/: CMakeLists.txt
networking_project/server/chat_server/api/: chat_server.h
networking_project/server/chat_server/inc/: chat_server_connections.h  chat_server_fsm.h  chat_server_internal.h
networking_project/server/chat_server/src/: chat_server.c  chat_server_cback.c  chat_server_fsm.c  chat_server_internal.c  chat_server_network.c
server/: CMakeLists.txt  server.c
server/chat_auth/inc/: chat_auth_internal.h
server/chat_auth/src/: chat_auth_internal.c
server/chat_clients/: CMakeLists.txt
server/chat_clients/inc/: chat_clients_fsm.h  chat_clients_internal.h
server/chat_clients/src/: chat_clients.c  chat_clients_cback.c  chat_clients_fsm.c  chat_clients_internal.c
server/chat_server/: CMakeLists.txt
server/chat_server/api/: chat_server.h
server/chat_server/inc/: chat_server_fsm.h  chat_server_internal.h
server/chat_server/src/: chat_server_cback.c  chat_server_fsm.c  chat_server_internal.c
(+17 files in other folders)
